--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "docker-compose": "^0.23.5",
     "mocha": "^8.1.3"
   }
 }
