changes on .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ before_script:
 
 scripts:
   - docker exec userserver npm test --cov=userserver
-  - docker exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" \
-                -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" userserver coveralls
+  - docker exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" userserver coveralls
 #--------------------------------------------------------------------------------#
 
 
