--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "userserver/app/main.js",
   "scripts": {
     "test": "mocha ./userserver/test",
-    "start": "node userserver/app/main.js"
+    "start": "node userserver/app/main.js",
+    "cover": "istanbul cover _mocha ./userserver/test", 
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "chai-http": "^4.3.0",
     "coveralls": "^3.1.0",
     "docker-compose": "^0.23.5",
+    "istanbul": "^0.4.5",
     "mocha": "^8.1.3",
     "mocha-lcov-reporter": "^1.3.0"
   }
