--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "userserver/app/main.js",
   "scripts": {
-    "test": "mocha ./userserver/test",
+    "test": "_mocha ./userserver/test",
     "start": "node userserver/app/main.js",
-    "coveralls": "nyc --reporter=text-lcov _mocha ./userserver/test -- --recursive -- --exit -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "coveralls": "nyc --reporter=text-lcov _mocha ./userserver/test -- --recursive -- --exit -R spec | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
