--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 scripts:
   - docker exec userserver npm test 
-  - docker exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" userserver npm run coveralls
+  - docker exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN"-e COVERALLS_GIT_BRANCH="$COVERALLS_GIT_BRANCH" -e COVERALLS_SERVICE_NAME="$COVERALLS_SERVICE_NAME" userserver npm run coveralls
   #--------------------------------------------------------------------------------#
 
 
