--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,13 @@ services:
 before_script:
   - docker-compose build
   - docker-compose up -d
-  - docker-compose run -d --name userserver web
 
 scripts:
-  - docker exec userserver npm test 
-  - docker exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" userserver npm run coveralls
+  - docker exec bookbnb-userserver_web npm test 
+
+after_success:
+  - docker exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" 
+    -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" bookbnb-userserver_web npm run coveralls
   #--------------------------------------------------------------------------------#
 
 
