add check for database connection

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ before_script:
   - docker-compose build
   - docker-compose up -d
 
+  # check that db is connected
+  - docker exec bookbnb-userserver_web bash -c 'while !</dev/tcp/db/5432; do sleep 1; done;'
+
 scripts:
   - docker exec bookbnb-userserver_web npm test 
 
