--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai-http": "^4.3.0",
     "coveralls": "^3.1.0",
     "docker-compose": "^0.23.5",
+    "eslint": "^7.11.0",
     "istanbul": "^0.4.5",
     "mocha": "^8.1.3",
     "mocha-lcov-reporter": "^1.3.0",
