Sqlite agregado para test, el archivo no se borra solo despues de test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,8 @@ services:
       - db # first execute database
 
     environment:
-      - TESTING=0
-      - ENVIRONMENT=dev
-      - DATABASE_URL=postgres://user:password@db/postserver_db_dev
+      - ENVIRONMENT=development
+      - DATABASE_URL=sqlite:///./app.db
 
 
   db:
