--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.4.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
