--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express": "^4.17.1",
     "pg": "^8.4.1",
     "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "swagger-jsdoc": "^5.0.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
