--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ scripts:
 
 after_success:
   - docker exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" 
-    -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" -e COVERALLS_GIT_BRANCH="$COVERALLS_GIT_BRANCH" 
+    -e COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" -e COVERALLS_GIT_BRANCH="$TRAVIS_BRANCH" 
     -e COVERALLS_SERVICE_NAME="$COVERALLS_SERVICE_NAME" bookbnb-userserver_web npm run coveralls
   
 #--------------------------------------------------------------------------------#
