--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.4.1",
+    "randomstring": "^1.1.5",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0",
     "swagger-jsdoc": "^5.0.0",
