--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       ENVIRONMENT: ${ENVIRONMENT:-development}
       DATABASE_URL: sqlite:///./app.db
-      ACCESS_TOKEN: ${ACCESS_TOKEN:-68b41bb674a4ae2a2fc0ca5193cdadb0}
+      API_KEY: ${API_KEY:-68b41bb674a4ae2a2fc0ca5193cdadb0}
 
 
   db:
