--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0",
     "swagger-jsdoc": "^5.0.0",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
